--- a/frontend-unsplash/package.json
+++ b/frontend-unsplash/package.json
@@ -20,6 +20,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-responsive-masonry": "^2.1.7",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
